--- a/style.css
+++ b/style.css
@@ -124,32 +124,59 @@ padding: 20px 30px;
 cursor: pointer;
 
 }
+/* responsive */
 
 
+ @media only screen and (min-width:768px){
 
-/* @media only screen and (min-width:768px){
+    .header_main{
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+         background-color: white;
+         width: 100%;
+     }
+
+     .header_child{
 
 
-
-    .header_child{
-
-
-       display: flex;
-       flex-direction: column;
+        /* display: grid;
+        grid-template-columns: 1fr 4fr; */
+        padding: 2px 0px;
+        column-gap: 5px;
     
     }
 
     .logo {
+        display: flex;
+        align-items: center;
+        justify-content: space-around; 
+        /* flex-direction: column; */
 
-        flex-direction: column;
 
     
        
     }
+
+    .logo i{
+        font-size: 10px;
+        display: flex;
+        width: 100%;
+
+        
+        
+        }
+        .logo i:hover{
+            font-size: 8px;
+        }
+        .logo h1{
+            font-size: 10px;
+            font-weight: 900;
+            letter-spacing: 1px;
+           
+        }
     .manu ul{
         flex-direction: column;
-        gap: 0px 15px;
+        gap: 0px 1px;
        
     }
     
-}  */
+}  
